# hkjc-edge-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  research_report.md
config/: .env.example  config.yaml
hkjc_edge/: __init__.py  cli.py  config.py  logging_setup.py
hkjc_edge/app/: __init__.py  consistency.py  ev.py  recommender.py  tracking.py
hkjc_edge/db/: database.py  schema.sql
hkjc_edge/model/: __init__.py  calibration.py  conditional_logit.py  evaluate.py  features.py  gbm.py  harville.py  market.py
hkjc_edge/pipeline/: dataset.py  ingest.py
hkjc_edge/sources/: csv_import.py  hkjc_odds.py  hkjc_racing.py  http_client.py  models.py  parse_util.py
hkjc_edge/validation/: __init__.py  metrics.py  plots.py  run.py  walkforward.py  whatif.py
hkjc_edge/web/: __init__.py  jobs.py  launcher.py  server.py  service.py
hkjc_edge/web/static/: app.js  index.html  styles.css
scripts/: historical_backtest.py  make_macos_app.py
tests/: conftest.py  test_app.py  test_calibration_features.py  test_harville.py  test_http_client.py  test_market.py  test_models.py  test_no_lookahead.py  test_parse_util.py  test_racing_parser.py  test_schema_provenance.py  test_validation.py  test_web.py
tests/fixtures/: results_sample.html  sectional_sample.html
